# skeletor

./: .ghci  .gitignore  .mailmap  Makefile  Makefile2  README.md  cabal-develop.project  cabal-static.project  cabal.project  ghc-08-00-02.project  ghc-08-02-02.project  ghc-08-04-04.project  ghc-08-06-03.project  install  repl.sh  shell.nix  stack.yaml
__PACKAGE__/: __PACKAGE__.cabal
__PACKAGE__/executables/: .dir-locals.el
__PACKAGE__/internals/: .dir-locals.el  Prelude___PACKAGE_UNDERSCORES__.hs
__PACKAGE__/tests/: .dir-locals.el  Main.hs
__PACKAGE__/tests/Test/: __MODULE__.hs
__PACKAGE__/tests/golden/: .dir-locals.el
__PACKAGE__/tests/property/: .dir-locals.el
__PACKAGE__/tests/property/Test/Property/: __MODULE__.hs
__PACKAGE__/tests/unit/Test/Unit/: __MODULE__.hs
data/: LICENSE-GPL3-StandardLicenseHeader.txt
data/configurations/: .gitignore
data/licenses/: LICENSE-BSD-3-Clause.txt
docs/: IMPLEMENTATION.md  Linux_Haskell-CabalNew_circleci-config.yml  NOTES.md  Old.txt  TODO.md  package-dependency-list.txt
docs/notes/: URI.md
etc/bash_completion.d/: skeletor-haskell.bash
haskell-project/: __PACKAGE__.cabal  haskell-project.cabal
haskell-project/internals/: .dir-locals.el  Prelude_haskell_project.hs
images/: skeletor-ascii.txt
nix/: README.md  environment.nix  project.nix  shell.nix  static-cabal.project.nix
nix/nixpkgs/: nixpkgs.json  (+1 more)
old/: OldCode.txt  skeletor.tar
projects/: default.md  foreign.md  simple.md
projects/default/xxx-package-xxx/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  xxx-package-xxx.cabal
projects/default/xxx-package-xxx/.circleci/: config.yml
projects/default/xxx-package-xxx/benches/space/Bench/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/benches/time/: .dir-locals.el
projects/default/xxx-package-xxx/benches/time/Bench/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/benchmarks/space/: .dir-locals.el  Main.hs
projects/default/xxx-package-xxx/benchmarks/space/Bench/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/benchmarks/time/: Main.hs
projects/default/xxx-package-xxx/benchmarks/time/Bench/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/data/golden/: example.txt.golden
projects/default/xxx-package-xxx/docs/man/: xxx-program-xxx.md
projects/default/xxx-package-xxx/executables/example/: .dir-locals.el  Main.hs
projects/default/xxx-package-xxx/executables/example/Example/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/executables/program/: .dir-locals.el  Main.hs  Prelude_exe.hs
projects/default/xxx-package-xxx/executables/program/Executable/Xxx_Module_xxX/: Constants.hs  Core.hs  Main.hs  Options.hs  Paths.hs  Types.hs
projects/default/xxx-package-xxx/executables/program/Program/Xxx_Module_xxX/: CLI.hs  Constants.hs  Core.hs  IO.hs  Main.hs  Options.hs  Paths.hs  Prelude.hs  Types.hs
projects/default/xxx-package-xxx/executables/program/Xxx_Module_xxX/: Main.hs  Options.hs  Program.hs  Types.hs
projects/default/xxx-package-xxx/include/: HsSbooMacros.h
projects/default/xxx-package-xxx/internals/: Paths_xxx_package_xxx.hs  Prelude_Xxx_PackageUnderscores_xxX.hs  Prelude_xxx_package_xxx.hs
projects/default/xxx-package-xxx/internals/Internal/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/share/systemd/: xxx-program-xxx.service
projects/default/xxx-package-xxx/tests/doc/: .dir-locals.el  DocTests.hs
projects/default/xxx-package-xxx/tests/golden/: .dir-locals.el  GoldenTests.hs
projects/default/xxx-package-xxx/tests/golden/Test/Golden/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/tests/golden/data/: example.golden
projects/default/xxx-package-xxx/tests/property/: .dir-locals.el  PropertyTests.hs
projects/default/xxx-package-xxx/tests/property/Test/Property/: Xxx_Module_xxX.hs
projects/default/xxx-package-xxx/tests/unit/: .dir-locals.el  UnitTests.hs
projects/default/xxx-package-xxx/tests/unit/Test/Unit/: Xxx_Module_xxX.hs
release/: cabal.project.freeze
scripts/: cabal2nix.nix  rename-directory.sh  rename-files.sh  rename.sh  static.nix
skeletor/: LICENSE.hs  LICENSE.txt  README.md  SKELETOR.md  skeletor.cabal
skeletor-emacs/: TODO.md
skeletor/data/examples/: defaults.ini  skeletor-emacs.ini  skeletor-haskell.ini  skeletor.ini
skeletor/data/licenses/AGPL-3.0-or-later/: LICENSE.txt  StandardLicenseHeader.txt
skeletor/data/licenses/Apache-2.0/: LICENSE.hs  LICENSE.txt  StandardLicenseHeader.txt
skeletor/data/licenses/BSD-2-Clause/: LICENSE.txt
skeletor/data/licenses/BSD-3-Clause/: LICENSE.txt
skeletor/data/licenses/BSD-4-Clause/: LICENSE.txt
skeletor/data/licenses/GPL-3.0-or-later/: LICENSE.hs  LICENSE.txt  StandardLicenseHeader.txt  TerminalLicenseNotice.txt
skeletor/data/licenses/GPL3/: TerminalLicenseNotice.txt
skeletor/data/licenses/LGPL-3.0-or-later/: LICENSE.txt
skeletor/data/licenses/MIT/: LICENSE.txt
skeletor/executables/skeletor/: .dir-locals.el  Main.hs  Prelude_exe.hs
skeletor/executables/skeletor/Program/Skeletor/Haskell/: Action.hs  CLI.hs  Command.hs  Config.hs  Constants.hs  Core.hs  IO.hs  License.hs  Macros.hs  Main.hs  Options.hs  Parsers.hs  Prelude.hs  Types.hs  Utilities.hs  Version.hs
skeletor/executables/skeletor/Program/Skeletor/Haskell/Action/: Types.hs
skeletor/executables/skeletor/Program/Skeletor/Haskell/Command/: Types.hs
skeletor/executables/skeletor/Program/Skeletor/Haskell/Config/: Types.hs
skeletor/executables/skeletor/Program/Skeletor/Haskell/Core/: Types.hs
skeletor/executables/skeletor/Program/Skeletor/Haskell/Options/: Types.hs
skeletor/executables/skeletor/Skeletor/Haskell/: Main.hs  Options.hs  Program.hs
skeletor/include/: HsSbooMacros.h
skeletor/internals/: Prelude_location.hs  Prelude_skeletor.hs
skeletor/internals/Internal/Skeletor/: Haskell.hs
skeletor/test/: .dir-locals.el  DocTests.hs
skeletor/tests/property/: .dir-locals.el  PropertyTests.hs
skeletor/tests/property/Test/Property/Skeletor/: Haskell.hs
skeletor/tests/unit/: .dir-locals.el  UnitTests.hs
skeletor/tests/unit/Test/Unit/Skeletor/: Haskell.hs
static/: default.nix
(+77 files in other folders)
