cabal-version:       2.4
                     -- ^
                     -- Cabal-2.4 introduces File Globs,
                     -- e.g. « **/*.txt ».
                     -- Cabal-2.2 introduced Common Stanzas.

build-type:          Simple

--------------------------------------------------

name:                skeletor
version:             0.0.0
                     -- ^ ❲ A.B.C.D ❳:
                     --
                     -- • ❲ A.B ❳ is the MajorVersion,
                     -- • ❲ C ❳ is the MinorVersion,
                     -- • ❲ D ❳ is a PatchVersion.

-- x-revision:          1

--------------------------------------------------
-- Metadata --------------------------------------
--------------------------------------------------

synopsis:
 Haskell project scaffolding

description:
 Create a haskell project from a template.

category:            Data

--------------------------------------------------

license:             GPL-3.0-or-later
license-file:        LICENSE.txt
copyright:           2018 Spiros Boosalis

author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com

--------------------------------------------------
-- Portability -----------------------------------
--------------------------------------------------

stability: provisional

--------------------------------------------------

tested-with:
            GHC == 8.2.2
            -- ^ ❲ -XDerivingStrategies ❳ requires ❲ GHC >= 8.2 ❳.
            GHC == 8.4.3
--          , GHC == 8.6.1

--------------------------------------------------
-- (Non-Code) Files ------------------------------
--------------------------------------------------

extra-source-files: README.md
                    LICENSE.txt

--------------------------------------------------

data-dir: data

data-files: licenses/**/*.txt
            .gitignore

--------------------------------------------------

--TODO add images
-- extra-doc-files: docs/

--------------------------------------------------
-- REPOSITORY
--------------------------------------------------

homepage:            http://github.com/sboosali/skeletor#readme
bug-reports:         http://github.com/sboosali/skeletor/issues

source-repository head
  type:     git
  location: git://github.com/sboosali/skeletor.git
  subdir:   skeletor

-- source-repository this
--   type:     git
--   location: https://github.com/sboosali/skeletor/tree/v0.1.0
--   subdir:   skeletor

--------------------------------------------------
-- Flags -----------------------------------------
--------------------------------------------------

-- flag ...
--   default:     False
--   description: Enable ...
--   manual:      True

--------------------------------------------------
-- Common Stanzas --------------------------------
--------------------------------------------------

common sboo-haskell

 ------------------------------

 default-language: Haskell2010
 
 ------------------------------
 
 build-depends:
               base >=4.10 && <5

 -----------------------------

 include-dirs:     include
 includes:         HsSbooMacros.h
 install-includes: HsSbooMacros.h

 ------------------------------

 ghc-options:

  --------------------
  -- warning groups
  --------------------

             -Wall

  --------------------
  -- disabled warnings
  --------------------

             -Wno-unticked-promoted-constructors

  --------------------
  -- enabled warnings
  --------------------

  -- enable:

             -Wmissing-methods
             -fwarn-name-shadowing
             -fwarn-tabs
              
  --------------------
  -- typed-holes
  --------------------

  -- use `typed-holes`, not `undefined`, during development

             -fdefer-typed-holes
             -Wtyped-holes

  --------------------
  -- (miscellaneous warnings)
  --------------------

  -- raise a warning into an error
  -- -Werror=missing-fields

 ------------------------------
 
 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------

                -Wcompat
      
        --------------------
        -- enabled warnings
        --------------------

                -Wnoncanonical-monad-instances
                -Wnoncanonical-monadfail-instances

                -Wincomplete-record-updates
                -Wincomplete-uni-patterns

                -Widentities

                -- -Wmissing-exported-signatures
                -- -Whi-shadowing

 ------------------------------
  
 if impl(ghc >= 8.2)
    ghc-options:

        --------------------
        -- enabled warnings
        --------------------

                -Wcpp-undef

                -Wmissing-home-modules

                -Wunbanged-strict-patterns

 ------------------------------

 default-extensions:

   --------------------
   -- "controversial"
   --------------------
                    NoImplicitPrelude

   --------------------
   -- `deriving`
   --------------------
                    AutoDeriveTypeable
                    DeriveDataTypeable
                    DeriveGeneric
                    DeriveFunctor
                    DeriveFoldable
                    DeriveTraversable
                    DeriveLift
                    StandaloneDeriving

                    DerivingStrategies
                    DeriveAnyClass
                    GeneralizedNewtypeDeriving

   --------------------
   -- syntax
   --------------------
                    PackageImports
                    LambdaCase
                    EmptyCase
                    TypeOperators
                    PostfixOperators
                    BangPatterns
                    KindSignatures
                    NamedFieldPuns
                    RecordWildCards
                    TupleSections
                    MultiWayIf
                    DoAndIfThenElse
                    EmptyDataDecls
                    InstanceSigs
                       
   --------------------
   -- typeclasses
   --------------------
                    MultiParamTypeClasses
                    FlexibleContexts
                    FlexibleInstances
                    TypeFamilies
                    FunctionalDependencies

   --------------------
   -- patterns
   --------------------
                    ViewPatterns
                    PatternSynonyms

   --------------------
   -- (miscellaneous)
   --------------------
                    ScopedTypeVariables

 ------------------------------

 other-extensions:

   --------------------
   -- macros
   --------------------
                  TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
                  OverloadedStrings
                  OverloadedLists

   --------------------
   -- (miscellaneous)
   --------------------

   -- RebindableSyntax
   -- kinds:
   -- DataKinds ConstraintKinds
   -- harmful to inference:
   -- GADTs RankNTypes
   -- (miscellaneous)

--------------------------------------------------

common sboo-main

 ------------------------------

 ghc-options:
 
   --------------------
   -- Compilation -----
   --------------------
 
             -O2

   --------------------
   -- Runtime ---------
   --------------------
 
             -threaded
             -rtsopts -with-rtsopts=-N             
 
   --------------------
   -- Warnings --------
   --------------------
 
             -Wno-missing-signatures
             -fno-warn-type-defaults
             
 ------------------------------

--------------------------------------------------
-- Library ---------------------------------------
--------------------------------------------------
library

 import: sboo-haskell

 hs-source-dirs:
                library
                internals
              --signatures
 --(TODO: signatures break repl.)

 ------------------------------
 ------------------------------
 exposed-modules: Skeletor

                  ------------

                  Skeletor.Core
                  Skeletor.Core.Types

                  Skeletor.Core.Fetch

                  Skeletor.Core.Location
                  Skeletor.Core.Location.Types

                  Skeletor.Core.EnvironmentVariable
                  Skeletor.Core.EnvironmentVariable.Types
                  Skeletor.Core.EnvironmentVariable.Errors
                  Skeletor.Core.EnvironmentVariable.Name
                  Skeletor.Core.EnvironmentVariable.Value
                  Skeletor.Core.EnvironmentVariable.Text
                  Skeletor.Core.EnvironmentVariable.Path
                  Skeletor.Core.EnvironmentVariable.List
                  Skeletor.Core.EnvironmentVariable.Number

                  ------------

                  Skeletor.Haskell
                  Skeletor.Haskell.Types

                  Skeletor.Haskell.Core
                  Skeletor.Haskell.Derived

                  Skeletor.Haskell.Find
                  Skeletor.Haskell.Find.Types

                  Skeletor.Haskell.Chiaroscuro
                  Skeletor.Haskell.Chiaroscuro.Types

                  Skeletor.Haskell.IO
                  Skeletor.Haskell.Fetch

                  Skeletor.Haskell.Variable
                  Skeletor.Haskell.Variable.Types
                  Skeletor.Haskell.Variable.Values

                  Skeletor.Haskell.Turtle

                  ------------

                  Internal.Skeletor.Haskell
                  Prelude_skeletor

                  ------------

                  Skeletor.Haskell.Location
                  Prelude_location

                  ------------

 other-modules: Paths_skeletor

 autogen-modules: Paths_skeletor

 ------------------------------
 ------------------------------

 -- signatures:

 --(TODO: signatures break repl.)

 ------------------------------
 ------------------------------
 build-depends:

   --------------------
   -- my libraries.
   --------------------

               spiros >= 0.3.1
               --TODO , spiros-base
   --          , enumerate

  --------------------
  -- boot-libraries & standard-library packages,
  --------------------

             , text
             , bytestring
             , containers
             , transformers
             , mtl

  --------------------
  -- extended(/unofficial) "standard-library" packages.
  --------------------

             , deepseq
             , hashable             >= 0.12.5
             , unordered-containers >= 0.2.0

   --------------------
   -- filesystem libraries.
   --------------------

             , filepath
             , directory
             , filemanip
             , turtle    >= 1.5

   --------------------
   -- web libraries.
   --------------------

             , modern-uri

   --------------------
   -- records libraries.
   --------------------

   --          , lens
   --          , generic-lens
              
   --------------------
   -- (miscellaneous libraries).
   --------------------
             , these

--------------------------------------------------
-- Tests -----------------------------------------
--------------------------------------------------

test-suite unit
  import: sboo-haskell
  import: sboo-main

  type:                exitcode-stdio-1.0
  main-is:             UnitTests.hs

  hs-source-dirs:      tests/unit
  other-modules:
                Test.Unit.Skeletor.Haskell

  -- build-tool-depends:
  --                    hspec-discover:hspec-discover

  build-depends:
                skeletor
              , tasty
              , tasty-hunit
              , HUnit

--------------------------------------------------

test-suite property
  import: sboo-haskell
  import: sboo-main

  type:                exitcode-stdio-1.0
  main-is:             PropertyTests.hs

  hs-source-dirs:      tests/property
  other-modules:
                Test.Property.Skeletor.Haskell

  build-depends:
                skeletor

              , hedgehog

              , tasty
              , tasty-hedgehog

--------------------------------------------------
-- Executables -----------------------------------
--------------------------------------------------

-- see « Skeletor.Haskell.Core ».

executable skeletor

  import: sboo-haskell
  import: sboo-main

  --- Skeletor.Haskell/Main.hs
  main-is:             Main.hs

  hs-source-dirs:      executables/skeletor

  other-modules: Program.Skeletor.Haskell.Main
                 Program.Skeletor.Haskell.Options
                 Program.Skeletor.Haskell.Core
                 Program.Skeletor.Haskell.Types

                 Prelude_exe

  build-depends:
                skeletor
              , spiros
              , optparse-applicative

--------------------------------------------------
--------------------------------------------------